fixed weird spacing at bottom of page

--- a/src/pages/MonitorsPage/Monitors/MonitorsPage.scss
+++ b/src/pages/MonitorsPage/Monitors/MonitorsPage.scss
@@ -5,7 +5,7 @@
 }
 .monitorContainer {
   display: flex;
-  padding-top: 5rem;
+  padding-top: 3rem;
   background: #d5d6e9;
   // height: 55rem;
   border: none;
