--- a/src/pages/MonitorsPage/Sensors.style.scss
+++ b/src/pages/MonitorsPage/Sensors.style.scss
@@ -17,7 +17,7 @@ $border-color: #0db4e9;
 
 .sensorChart {
   background: #d5d6e9;
-  height: 200px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -31,7 +31,6 @@ $border-color: #0db4e9;
     border: none;
     display: flex;
     align-items: center;
-    margin-bottom: 13px;
     background: #d5d6e9;
     justify-content: center;
 
@@ -268,7 +267,7 @@ input {
 }
 
 #grid-wrapper {
-  border-bottom: 6px solid #0db4e9;
+  border-bottom: 1px solid #0db4e9;
 }
 
 // .ag-floating-filter-input {
